<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/account"
        android:icon="@drawable/baseline_accounts_24"/>
    <item
        android:id="@+id/business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/business"
        android:icon="@drawable/baseline_business_24"/>
    <item
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"/>
</menu>